--- a/grsmu_diplom/static/css/styles/demo_site/demo_site_detail.css
+++ b/grsmu_diplom/static/css/styles/demo_site/demo_site_detail.css
@@ -121,32 +121,7 @@ margin: 10;
 
 
 PAGINATION
-.pagination_rounded, .pagination_square {
-    display: inline-block;
-    margin-top:300px;
-    position: relative;
-    margin-left: 100px;
-    text-align: center;
-}
-
-
-.pagination_rounded ul {
-    position: center;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-.pagination_rounded li:first-child {
-    margin-left: 0px;
-}
-
-.pagination_rounded ul li {
-    float: left;
-    margin-left: 20px;
-}
-
-.pagination_rounded ul li a:hover {
+.pagination_rounded ul .prev li a:hover {
     background: #4285f4;
     color: #fff;
     border: 1px solid #4285f4;
@@ -157,38 +132,35 @@ a:link {
 }
 
 .pagination_rounded .prev {
-    margin-left: 0px;
-    border-radius: 35px;
-    width: 90px;
-    height: 34px;
+    margin: 0px;
+    border-radius: 10px;
     line-height: 34px;
-    background-color: white;
+    background-color: #fafafa;
+    pagination: 38px;
+    padding: 6px 20px;
+    padding-left-right: 10px;
 }
 
-
-.pagination_rounded ul li a {
-    float: left;
-    color: #4285f4;
-    border-radius: 50%;
-    line-height: 30px;
-    height: 30px;
-    width: 30px;
-    text-align: center;
-    margin-bottom: 40px;
-    border: 1px solid #e0e0e0;
-}
-
-.pagination_rounded .prev i {
-    margin-right: 10px;
-}
 
 .pagination_rounded .next {
-    border-radius: 35px;
-    width: 90px;
-    height: 34px;
+    margin: 0px;
+    border-radius: 10px;
     line-height: 34px;
-    background-color: white;
+    background-color: #fafafa;
+    pagination: 38px;
+    padding: 6px 20px;
+    padding-left-right: 10px;
 
+}
+
+.current {
+    margin: 5px;
+    border-radius: 10px;
+    line-height: 34px;
+    background-color: #fafafa;
+    pagination: 38px;
+    padding: 6px 20px;
+    padding-left-right: 10px;
 }
 
 .visible-xs {
@@ -196,7 +168,8 @@ a:link {
 }
 
 .step-links {
-margin-right: 50%;
+margin-top: 0%;
+text-align: center;
 }
 
 
