--- a/grsmu_diplom/users/templates/users/profile_page.html
+++ b/grsmu_diplom/users/templates/users/profile_page.html
@@ -73,26 +73,25 @@
                 		</div>
 					</div>
 				{% endfor %}
-				    <div class="pagination_rounded">
+				<div class="container" style="display:inline;" >
+					<div class="pagination_rounded">
 						<div class="step-links">
-							<ul>
 								{% if page_obj.has_previous %}
-									<li><a href="?page=1" class="prev">&laquo; First</a></li>
-									<li><a href="?page={{ page_obj.previous_page_number }}" class="prev"><i class="fa fa-angle-left" aria-hidden="true"></i>Prev</a></li>
+									<a href="?page=1" class="prev">&laquo;</a>
+									<a href="?page={{ page_obj.previous_page_number }}" class="prev"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
 								{% endif %}
 
-								<li><span class="current">
-									стр. {{ page_obj.number }} из {{ page_obj.paginator.num_pages }}
-								</span></li>
+								<span class="current">
+									{{ page_obj.number }} из {{ page_obj.paginator.num_pages }}
+								</span>
 
 								{% if page_obj.has_next %}
-									<li><a href="?page={{ page_obj.next_page_number }}" class="next"> Next <i class="fa fa-angle-right" aria-hidden="true"></i></a></li>
-									<li><a href="?page={{ page_obj.paginator.num_pages }}" class="next">Last &raquo;</a></li>
+									<a href="?page={{ page_obj.next_page_number }}" class="next"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
+									<a href="?page={{ page_obj.paginator.num_pages }}" class="next">&raquo;</a>
 								{% endif %}
-							</ul>
 						</div>
 					</div>
-			</div>
+				</div>
 <!--ФОРМА ПРОВЕРКИ MOODLE-->
 		<div class="modal fade" tabindex="-1" id="VerificationModal" role="dialog">
 	  		<div class="modal-dialog" role="document" >
